--- a/public/scss/custom/structure/_preloader.scss
+++ b/public/scss/custom/structure/_preloader.scss
@@ -9,7 +9,7 @@ Preloader
     top:0px;
     position: fixed;
     z-index: 99999;
-    background: #fff;
+    background: #000000;
     .cssload-speeding-wheel{
         
     }
@@ -24,7 +24,7 @@ Preloader
   left: calc(50% - 3.5px);
     .lds-pos {
       position: absolute;
-      border: 2px solid #2962FF;
+      border: 2px solid #ff2929;
       opacity: 1;
       border-radius: 50%;
       animation: lds-ripple 1s cubic-bezier(0, 0.1, 0.5, 1) infinite;
